--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "my boiler plate for starting a new react app",
   "main": "src/index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "build": "webpack -w",
+    "start:dev": "webpack-dev-server --hot --colors --watch --inline",
+    "start": "npm-run-all -p build webpackdev"
   },
   "repository": {
     "type": "git",
@@ -17,15 +20,23 @@
   },
   "homepage": "https://github.com/davidcsally/react-boiler-plate#readme",
   "dependencies": {
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "material-ui": "^0.20.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-react-css-modules": "^3.3.3",
     "babel-polyfill": "^6.26.0",
@@ -42,8 +53,10 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "jest": "^22.4.0",
     "node-sass": "^4.7.2",
+    "npm-run-all": "^4.1.2",
     "postcss-loader": "^2.1.0",
     "postcss-scss": "^1.0.3",
+    "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
